# cryptotrading

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  backtest_strategy.py  convert_klines_time.py  docker-compose.prod.yml  docker-compose.yml  fetch_klines.py  fetch_symbols.py  generate_random.py  kline_indicators.py  main.py  nginx.conf  package.json  patch_klines_indicators.py  pnpm-lock.yaml  report.html  serve_report.py  serve_symbols.py  start.bat  start.ps1  symbols.html  tmp_stats.json  trading_flow.html  update_indicators.py
apps/quant-pipeline/: .env.example  .gitignore  README.md  pyproject.toml  uv.toml
apps/quant-pipeline/data/: us_index_constituent_ndx.csv
apps/quant-pipeline/kelly_sweep_bandlock_test/: kelly_sweep_report.md  pareto_frontier.csv  top_k_ranking.csv
apps/quant-pipeline/src/quant_pipeline/: __init__.py  cli.py  cli_common.py  cli_m4.py  cli_ml.py  cli_quality.py  labels_features_incremental.py
apps/quant-pipeline/tests/: test_us_index_amv_formula.py  test_us_index_amv_pipeline.py
apps/quant-pipeline/tests/contract/: test_tushare_field_freeze.py
apps/quant-pipeline/tests/custom_index/: test_price_index.py  test_weight_resolver.py
apps/quant-pipeline/tests/fixtures/: amv_parity_golden.json
apps/quant-pipeline/tests/integration/: _recompute_helpers.py  conftest.py  probe_recompute_diff.py  run_recompute_features.py  run_recompute_labels.py  test_factors_runner_pg.py  test_partitions_migration_pg.py  test_reaper_orphaned_running_pg.py  test_recompute_helpers.py  test_self_check.py  verify_bug5_suspended_ma.py  verify_incremental_correctness.py  verify_lambdarank_label_gain_crash.py  verify_recompute_inference_drift.py  verify_retrain_lambdarank_new_fm.py  verify_shadow_vs_prod.py
apps/quant-pipeline/tests/unit/: conftest.py  test_ab_compare.py  test_akshare_index_client.py  test_band_lock_exit.py  test_band_lock_scheme.py  test_base_scheme_codec.py  test_classify.py  test_cli_evaluate.py  test_cli_infer_auto.py  test_cli_labels_build.py  test_cli_trade_cal_offset.py  test_dir3_scheme.py  test_direction_3class_labels.py  (+87 more)
apps/quant-pipeline/tools/: lint_no_silent_degradation.py
quant-pipeline/: README.md  alembic.ini  docker-compose.test.yml  pyproject.toml
quant-pipeline/src/quant_pipeline/: cli.py
quant-pipeline/tests/contract/: test_tushare_field_freeze.py
quant-pipeline/tests/unit/: test_artifact_io.py  test_cli_evaluate.py  test_evaluation_shap.py  test_factors_industry.py  test_features_builder.py  test_monitor.py  test_portfolio.py  test_progress_payload.py  test_quality_pit_audit.py  test_quality_runner.py  test_report_generator.py  test_shap_explainer.py  test_sync_index_member.py  test_sync_suspend.py  test_sync_trade_cal.py  test_sync_tushare_client.py  test_training_lambdarank.py  test_training_runner.py  test_training_tuning.py
(+2640 files in other folders)
