[project]
name = "quant-pipeline"
version = "0.1.0"
description = "A 股截面选股量化管道（M0 骨架）"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "cryptotrading" }]

dependencies = [
    # ---- M0 必需 ----
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    # ---- M1 ----
    "pandas>=2.2",
    "numpy>=1.26",
    "tushare>=1.4",
    # ---- M1/M2 加 ----
    # "polars>=0.20",
    "pyarrow>=15",
    # ---- M2 Part G：LightGBM LambdaRank 训练 + inference ----
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    # ---- M4 Part L：Optuna 调参 + SHAP 解释 ----
    "optuna>=3.6",
    "shap>=0.45",
    # ---- LSTM：次日方向三分类序列模型（CPU 版即可）----
    "torch>=2.2",
    "akshare>=1.18.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
quant = "quant_pipeline.cli:app"
quant-worker = "quant_pipeline.worker.__main__:main"
lint-no-silent-degradation = "tools.lint_no_silent_degradation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
